# A-C-module-for-Node.js-providing-access-to-the-system-font-catalog.

./: CMakeLists.txt  README.md  azure-pipelines.yml  package.json
.github/workflows/: build.yml
ci/: build-osx.sh
dependencies/: node_fontmanager.node.txt
src/: FontDescriptor.h  FontManager.cc  FontManagerLinux.cc  FontManagerMac.mm  FontManagerWindows.cc
